# jiosaavn-api

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  auto.json  docker-compose.yaml  hqa_search.json  jio.json  jio_auto.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  search.json  setup-hqaudio.sh  test_details.py  test_res.json  test_search.py  vercel.json
.github/workflows/: ci.yaml  deploy.yml
frontend/: vite.config.ts
frontend/src/: App.css  App.tsx  index.css
rust/: Cargo.toml
rust/src/: api.rs  crypto.rs  handlers.rs  logs.html  main.rs  models.rs
rust/src/logs_ui/: index.html  script.js  styles.css
src/: app.ts  server.ts
src/common/classes/tests/: use-case-logger.class.spec.ts
src/common/constants/: endpoint.constant.ts
src/common/helpers/: assert.helper.ts  fetch.helper.ts  index.ts  link.helper.ts  response.helper.ts
src/common/helpers/tests/: fetch.helper.spec.ts  (+1 more)
src/common/models/: download.model.ts  index.ts  pagination.model.ts
src/common/types/: index.ts
src/common/utils/: coerce.util.ts  index.ts  json.util.ts
src/modules/: index.ts
src/modules/albums/: album.controller.spec.ts  album.controller.ts  album.helper.ts  album.model.ts
src/modules/artists/: artist.controller.ts  artist.helper.ts
src/modules/browse/: index.ts
src/modules/playlists/: playlist.controller.spec.ts  playlist.controller.ts  playlist.helper.ts  playlist.model.ts
src/modules/resolve/: index.ts  resolve.model.ts
src/modules/search/: search.controller.ts  search.helper.ts
src/modules/songs/: song.controller.ts  song.helper.ts  song.service.ts
src/pages/: home.tsx
(+58 files in other folders)
