[package]
name = "jiosaavn-api-rust"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
des = "0.8"
cipher = { version = "0.4", features = ["block-padding"] }
base64 = { version = "0.22", features = ["alloc"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
rand = "0.8"
url = "2.5"
once_cell = "1.19"
tracing-subscriber = "0.3"
chrono = "0.4"
dotenvy = "0.15"


